UV Map Memory Leak #39452

Closed
opened 2014-03-27 05:30:49 +01:00 by mobious · 6 comments

System Information
Windows 7 Home Premium 64-bit
ATI Mobility Radeon HD 4670

Blender Version
Broken: 2.70 19e627c, 2.68 r58537
Worked: 2.67 r56533

Short description of error
The game engine leaks memory when objects have UV maps.

Exact steps for others to reproduce the error
Create a plane, unwrap its UVs, then subdivide it several times. Note the amount of memory Blender is currently using, then start and stop the game engine repeatedly and note how Blender's memory usage continues to increase.

Attached Files
UVleak.blend
Contains a plane with a simple UV map and has been subdivided 7 times so the amount of leaked memory is more prominent.

**System Information** Windows 7 Home Premium 64-bit ATI Mobility Radeon HD 4670 **Blender Version** Broken: 2.70 19e627c, 2.68 r58537 Worked: 2.67 r56533 **Short description of error** The game engine leaks memory when objects have UV maps. **Exact steps for others to reproduce the error** Create a plane, unwrap its UVs, then subdivide it several times. Note the amount of memory Blender is currently using, then start and stop the game engine repeatedly and note how Blender's memory usage continues to increase. **Attached Files** [UVleak.blend](https://archive.blender.org/developer/F82845/UVleak.blend) Contains a plane with a simple UV map and has been subdivided 7 times so the amount of leaked memory is more prominent.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mobious

Added subscriber: @mobious

This issue was referenced by blender/blender-addons-contrib@7ff123ce5c

This issue was referenced by blender/blender-addons-contrib@7ff123ce5c08953a31f5728922be9d56c4ed850c

This issue was referenced by 7ff123ce5c

This issue was referenced by 7ff123ce5c08953a31f5728922be9d56c4ed850c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7ff123ce5c.

Closed by commit 7ff123ce5c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39452
No description provided.